--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,5 @@
 body{
     background-color: #D4ECDD;
-    color:#247881;
     margin:0;
     text-align: center;
     font-family: 'Raleway', sans-serif; 
@@ -8,13 +7,30 @@ body{
 .top-container{
     background-color: #B4ECE3;
     position:relative;
-    padding-top:410px;
+    padding-top:320px;
 }
 h1{ 
-   margin-top: 0 ;
+   color: #247881;
+   margin:30px auto 0 auto;
    font-family: 'MonteCarlo', cursive;
-   font-size: 48px;
-   
+   font-size: 4rem;
+   line-height: 2;  
+}
+
+h2{
+    color:#247881;
+}
+
+h3{
+    color:#247881;
+}
+
+p{
+    color:#247881;
+}
+a{
+    color:#66BFBF;
+    text-decoration-line: none;
 }
 .middle-container {
 }
@@ -26,15 +42,49 @@ h1{
 
 .bottom-cloud{
     position:absolute;
-    left:420px;
-    top:320px;
+    left:400px;
+    top:400px;
+}
+.skill-left{
+    width: 50%;
+    margin:50px auto;
+    line-height: 3; 
+    text-align: left;  
+}
+.skill-right{
+    width: 50%;
+    margin:0 auto 180px auto;
+    line-height: 2;  
+    text-align: right;  
 }
 
 .top-cloud{
     position:absolute;
     right:540px;
-    top:150px;
+    top:200px;
 }
 .mountain{
     height:380px;  
+}
+.cat{
+     width:20%; 
+     float: left; 
+     margin-right: 10px;
+       
+}
+.cute{
+    width:25%;
+    border-radius: 60%;
+    float:right;
+    margin-left: 100px;
+}
+.pepega{
+    font-size:1.5rem
+}
+.dotdot{
+    border-style: dotted; 
+    width: 15%; 
+    border-top-style: none;
+    border-width: 5px;
+    color:#66BFBF;
 }
